# ai_doc_translator

./: .env.example  .gitattributes  .gitignore  PRD.md  alembic.ini  docker-compose.yml  pyproject.toml
.cursor/agents/: debugger.md  documenter.md  planner.md  review.md  test-runner.md  worker.md
.cursor/commands/: create-prd.md  git-commit.md  implement.md  orchestrate.md  review.md
.cursor/rules/: agent-patterns.mdc  langgraph-node-patterns.mdc  project-overview.mdc  tool-patterns.mdc
alembic/: env.py
alembic/versions/: 1a4a0335dda3_init.py
app/: config.py  main.py
app/agent/: __init__.py  graph.py  state.py  tools.py
app/agent/nodes/: __init__.py  assemble_document.py  chunk_document.py  detect_language.py  load_glossary.py  parse_document.py  save_history.py  translate_chunk.py  update_context.py  update_job_progress.py
app/agents/: __init__.py  base.py  context_agent.py  llm_factory.py  translation_agent.py
app/api/: glossaries.py  history.py  translations.py
app/models/: __init__.py  database.py  glossary.py  history.py  job.py  schemas.py  user.py
app/services/: document_assembler.py  document_chunker.py  document_parser.py  pdf_layout_translator.py  quality_metrics.py  task_queue.py  user.py
app/static/css/: main.css
app/static/js/: app.js
app/templates/: base.html  glossary.html  history.html  index.html
docs/: SPEC.md
tests/: conftest.py  test_agent_nodes.py  test_api.py  test_assembler.py  test_chunker.py  test_parsers.py  test_pdf_layout_translator.py  test_quality_metrics.py
